# multiplatform-code-generator

./: .gitignore  COMPARISON.md  CURSOR_SETUP.md  DEPLOYMENT.md  EXAMPLES.md  GITHUB_PUBLISH_GUIDE.md  GITHUB_README.md  LICENSE  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SHARING_INSTRUCTIONS.md  USER_GUIDE.md  package-lock.json  package.json  start-mcp.sh  test.js  verify_cursor_setup.sh
python/: README.md  pyproject.toml  requirements.txt  start_mcp.py  start_mcp.sh  test_generator.py
python/src/multiplatform_code_generator/: __init__.py  main.py  mcp_types.py  server.py
python/src/multiplatform_code_generator/generators/: __init__.py  android_jni.py  harmony_napi.py  ios_oc.py
python/src/multiplatform_code_generator/parsers/: __init__.py  cpp_parser.py
python/src/multiplatform_code_generator/utils/: __init__.py  file_manager.py
src/: index.js
src/generators/: android-jni.js  harmony-napi.js  ios-oc.js
src/parsers/: cpp-parser.js
src/utils/: file-manager.js
